crates/crates_io_og_image/src/snapshots/crates_io_og_image__tests__404-avatar.snap
---
source: crates/crates_io_og_image/src/lib.rs
expression: image_data
extension: png
snapshot_kind: binary
---
